added previews section +

--- a/css/main.sass
+++ b/css/main.sass
@@ -158,13 +158,9 @@ header
       transition: 1s
       border-radius: 10px
       perspective: 300px
-      &:hover
-        //box-shadow: inset 0px 0px 20px 2px rgba(0, 0, 0, 0.3)
-        img
+      &:hover img
           filter: drop-shadow(0px 15px 3px rgba(0,0,0,0.4))
-          transform: translateZ(10px)
-        h3, p
-          //transform: translateZ(-2px)
+          transform: translateZ(30px)
       img
         height: 70px
         margin-bottom: 52px
@@ -187,7 +183,6 @@ header
 .reviews
   padding: 105px 0
   height: 490px
-  //background-color: #cfff13
   position: relative
   overflow: hidden
   color: $text-light
