--- a/css/main.sass
+++ b/css/main.sass
@@ -181,7 +181,7 @@ header
 //reviews section styles
 
 .reviews
-  padding: 105px 0
+  padding: 100px 0
   height: 490px
   position: relative
   overflow: hidden
@@ -197,3 +197,21 @@ header
     left: 0
     right: 0
     z-index: -1
+  .wrap
+    height: 235px
+    .content
+      padding: 0 90px
+    .arrow
+      display: flex
+      height: 100%
+      img
+        margin: auto 0
+    .right-arrow
+      justify-content: flex-end
+      img
+        transform: rotateZ(180deg)
+    .review
+      font-size: 20px
+      .text
+        margin: 60px 0
+        font-style: italic
