--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
-  font-family: Roboto, Tahoma, sans-serif; }
+  font-family: Roboto, Tahoma, sans-serif;
+  box-sizing: border-box; }
 
 h2 {
   text-align: center;
@@ -54,7 +55,8 @@ header {
     color: inherit; }
 
 .home {
-  min-height: calc(100vh - 75px);
+  height: calc(100vh - 75px);
+  min-height: 600px;
   background: url("/img/home-bg.png") center -75px no-repeat;
   color: #EBEBF0;
   text-align: right; }
@@ -68,7 +70,8 @@ header {
   .home h1 {
     font-size: 50px;
     font-weight: 700;
-    letter-spacing: 2px; }
+    letter-spacing: 2px;
+    text-transform: uppercase; }
     .home h1 span {
       color: #103B99; }
     .home h1:after {
@@ -81,7 +84,7 @@ header {
       right: 15px;
       bottom: -20px; }
   .home-description {
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 300;
     margin-top: 46px; }
   .home .row-button {
@@ -98,7 +101,7 @@ header {
     margin-right: 15px;
     margin-top: 57px;
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 16px;
     transition: 0.5s;
     color: #EBEBF0;
     text-decoration: none; }
@@ -116,11 +119,12 @@ header {
     background-color: #103B99; }
   .advantages-tagline {
     text-align: center;
-    font-size: 15px;
+    font-size: 16px;
     padding: 0 60px;
     margin-top: 30px; }
   .advantages-block {
     display: flex;
+    justify-content: space-between;
     margin-top: 30px; }
     .advantages-block-item {
       width: 25%;
@@ -146,11 +150,11 @@ header {
       .advantages-block-item p {
         padding: 0 33px;
         transition: 1s;
-        font-size: 15px; }
+        font-size: 16px; }
 
 .reviews {
-  padding: 100px 0;
-  height: 470px;
+  padding: 105px 0;
+  height: 490px;
   position: relative;
   overflow: hidden;
   color: #EBEBF0; }
@@ -182,4 +186,94 @@ header {
       font-size: 20px; }
       .reviews .wrap .review .text {
         margin: 60px 0;
-        font-style: italic; }
+        font-style: italic;
+        line-height: 1.5em; }
+
+.courses {
+  padding: 105px 0;
+  min-height: 910px;
+  background: #F0F0FD;
+  color: #182748; }
+  .courses h2 {
+    text-align: start; }
+  .courses h2:after {
+    background-color: #103B99;
+    margin-left: 0; }
+  .courses .courses-block {
+    margin-top: 60px;
+    padding: 0 15px;
+    display: flex;
+    justify-content: space-between; }
+    .courses .courses-block .courses-block-item {
+      width: calc(100%/3 - 20px);
+      max-width: 380px;
+      margin-bottom: 30px;
+      position: relative; }
+      .courses .courses-block .courses-block-item img {
+        display: block;
+        width: 100%; }
+      .courses .courses-block .courses-block-item .hover-box {
+        opacity: 0;
+        transition: 1s;
+        background: rgba(0, 0, 0, 0.3);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 246px;
+        text-transform: uppercase;
+        font-size: 75px;
+        padding: 40px 40px 40px 0; }
+        .courses .courses-block .courses-block-item .hover-box:hover {
+          opacity: 1;
+          cursor: pointer;
+          padding-left: 40px;
+          color: rgba(255, 255, 255, 0.5);
+          font-weight: bold; }
+      .courses .courses-block .courses-block-item .content {
+        border: solid 1px #c6c6c6;
+        border-top: none;
+        padding: 30px;
+        background: #FFF; }
+        .courses .courses-block .courses-block-item .content h3 {
+          text-transform: uppercase; }
+          .courses .courses-block .courses-block-item .content h3:after {
+            content: "";
+            display: block;
+            height: 2px;
+            width: 70px;
+            margin: 23px 0;
+            background-color: #103B99; }
+        .courses .courses-block .courses-block-item .content p {
+          font-size: 16px;
+          font-weight: 300;
+          line-height: 1.5em; }
+        .courses .courses-block .courses-block-item .content .cost {
+          font-size: 36px;
+          font-weight: bold;
+          margin: 25px 0; }
+        .courses .courses-block .courses-block-item .content .buttons {
+          display: flex;
+          justify-content: space-between; }
+          .courses .courses-block .courses-block-item .content .buttons .button {
+            width: calc(50% - 15px);
+            height: 45px;
+            border: solid 1px #103B99;
+            border-radius: 21px;
+            text-transform: uppercase;
+            text-align: center;
+            padding-top: 12.5px; }
+            .courses .courses-block .courses-block-item .content .buttons .button:hover {
+              cursor: pointer; }
+            .courses .courses-block .courses-block-item .content .buttons .button.send {
+              background-color: #103B99;
+              color: #FFF; }
+              .courses .courses-block .courses-block-item .content .buttons .button.send:hover {
+                border-color: #182748;
+                background-color: #182748; }
+            .courses .courses-block .courses-block-item .content .buttons .button.read {
+              background-color: #FFF;
+              color: #103B99; }
+              .courses .courses-block .courses-block-item .content .buttons .button.read:hover {
+                background-color: #103B99;
+                color: #FFF; }
