--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,11 @@ header {
   display: flex;
   align-items: center;
   text-transform: uppercase;
-  font-size: 20px; }
+  font-size: 20px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 9999; }
   header .container {
     padding: 0 85px; }
   header nav {
@@ -59,7 +63,8 @@ header {
   min-height: 600px;
   background: url("/img/home-bg.png") center -75px no-repeat;
   color: #EBEBF0;
-  text-align: right; }
+  text-align: right;
+  margin-top: 75px; }
   .home .container {
     padding: 0 85px; }
   .home-tag {
