--- a/css/main.sass
+++ b/css/main.sass
@@ -53,6 +53,10 @@ header
   align-items: center
   text-transform: uppercase
   font-size: $text-l
+  position: fixed
+  width: 100%
+  top: 0
+  z-index: 9999
   .container
     padding: 0 85px
   nav
@@ -90,6 +94,7 @@ header
   background: url("/img/home-bg.png") center -75px no-repeat
   color: $text-light
   text-align: right
+  margin-top: 75px
   .container
     padding: 0 85px
   &-tag
