--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ header {
   position: fixed;
   width: 100%;
   top: 0;
-  z-index: 9999; }
+  z-index: 999; }
   header .container {
     padding: 0 85px; }
   header nav {
@@ -109,7 +109,8 @@ header {
     font-size: 16px;
     transition: 0.5s;
     color: #EBEBF0;
-    text-decoration: none; }
+    text-decoration: none;
+    cursor: pointer; }
     .home-button:hover {
       transform: translateZ(1px) rotateY(-0.5deg);
       box-shadow: -15px 18px 20px 0px #000; }
@@ -303,3 +304,39 @@ header {
               .courses .courses-block .courses-block-item .content .buttons .button.read:hover {
                 background-color: #103B99;
                 color: #FFF; }
+
+.allCoursesBox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(0, 0, 0, 0.95);
+  z-index: 9999; }
+  .allCoursesBox.show {
+    display: block; }
+  .allCoursesBox.hide {
+    display: none; }
+  .allCoursesBox .container {
+    position: relative;
+    height: 100%; }
+    .allCoursesBox .container .popup-closeButton {
+      position: absolute;
+      top: 10%;
+      right: 0;
+      width: 60px;
+      height: 60px;
+      text-align: center;
+      line-height: 58px;
+      color: #FFF;
+      border: 1px solid #FFF;
+      border-radius: 50%;
+      font-size: 24px;
+      cursor: pointer; }
+      .allCoursesBox .container .popup-closeButton:hover {
+        background: #FFF;
+        color: rgba(0, 0, 0, 0.95); }
+    .allCoursesBox .container .content {
+      color: #fff;
+      font-size: 150px;
+      text-align: center; }
