--- a/css/main.sass
+++ b/css/main.sass
@@ -56,7 +56,7 @@ header
   position: fixed
   width: 100%
   top: 0
-  z-index: 9999
+  z-index: 999
   .container
     padding: 0 85px
   nav
@@ -140,6 +140,7 @@ header
     transition: 0.5s
     color: $text-light
     text-decoration: none
+    cursor: pointer
     &:hover
       transform: translateZ(1px) rotateY(-0.5deg)
       box-shadow: -15px 18px 20px 0px #000
@@ -350,3 +351,43 @@ $card-border-radius: 5px
               &:hover
                 background-color: $bg-text-accent
                 color: $bg-text-extra-light
+
+//courses popup styles
+
+$bg-popup: rgba(0, 0, 0, 0.95)
+
+.allCoursesBox
+  position: fixed
+  top: 0
+  left: 0
+  height: 100vh
+  width: 100vw
+  background: $bg-popup
+  z-index: 9999
+  &.show
+    display: block
+  &.hide
+    display: none
+  .container
+    position: relative
+    height: 100%
+    .popup-closeButton
+      position: absolute
+      top: 10%
+      right: 0
+      width: 60px
+      height: 60px
+      text-align: center
+      line-height: 58px
+      color: $bg-text-extra-light
+      border: 1px solid $bg-text-extra-light
+      border-radius: 50%
+      font-size: 24px
+      cursor: pointer
+      &:hover
+        background: $bg-text-extra-light
+        color: $bg-popup
+    .content
+      color: #fff
+      font-size: 150px
+      text-align: center
