--- a/css/main.css
+++ b/css/main.css
@@ -311,15 +311,20 @@ header {
   left: 0;
   height: 100vh;
   width: 100vw;
-  background: rgba(0, 0, 0, 0.95);
-  z-index: 9999; }
+  background: rgba(37, 37, 37, 0.7);
+  z-index: 9999;
+  transition: 1s; }
   .allCoursesBox.show {
-    display: block; }
+    opacity: 0; }
+    .allCoursesBox.show + .static {
+      filter: blur(5px) contrast(75%);
+      margin-top: -75px; }
   .allCoursesBox.hide {
     display: none; }
   .allCoursesBox .container {
     position: relative;
-    height: 100%; }
+    height: 100%;
+    transition: 1s; }
     .allCoursesBox .container .popup-closeButton {
       position: absolute;
       top: 10%;
@@ -335,8 +340,50 @@ header {
       cursor: pointer; }
       .allCoursesBox .container .popup-closeButton:hover {
         background: #FFF;
-        color: rgba(0, 0, 0, 0.95); }
-    .allCoursesBox .container .content {
-      color: #fff;
-      font-size: 150px;
-      text-align: center; }
+        color: rgba(0, 0, 0, 0.7); }
+    .allCoursesBox .container .crsLabel {
+      position: relative; }
+      .allCoursesBox .container .crsLabel .crsImg {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position-y: center; }
+        .allCoursesBox .container .crsLabel .crsImg.current {
+          height: 250px;
+          position: absolute;
+          width: 40%;
+          top: 90px;
+          left: 30%; }
+    .allCoursesBox .container .crsDesc {
+      color: #c3c3c3;
+      font-size: 16px;
+      margin-top: 210px;
+      background: rgba(28, 37, 47, 0.7);
+      padding: 180px 40px 40px 40px;
+      height: 470px;
+      box-shadow: 35px 35px 60px 0 #1b1b1b; }
+      .allCoursesBox .container .crsDesc h2 {
+        text-align: right;
+        font-weight: normal;
+        margin-top: -4px; }
+        .allCoursesBox .container .crsDesc h2::after {
+          background: #EBEBF0;
+          margin-right: 0; }
+      .allCoursesBox .container .crsDesc .amount {
+        font-size: 36px;
+        text-align: right;
+        padding: 30px 0; }
+      .allCoursesBox .container .crsDesc .button-send {
+        text-transform: uppercase;
+        color: #000;
+        padding: 20px;
+        font-size: 24px;
+        text-align: center;
+        border: 1px solid;
+        border-radius: 36px;
+        background: rgba(195, 195, 195, 0.1); }
+      .allCoursesBox .container .crsDesc .fullDesc {
+        padding-left: 60px; }
+        .allCoursesBox .container .crsDesc .fullDesc p {
+          margin-bottom: 20px;
+          font-weight: 300;
+          line-height: 22px; }
