--- a/css/main.sass
+++ b/css/main.sass
@@ -18,6 +18,8 @@ $text-xl: 30px
 $text-xxl: 50px
 $text-xxxl: 75px
 
+$text-cost: 36px
+
 
 
 //basic styles
@@ -331,7 +333,7 @@ $card-border-radius: 5px
           font-weight: 300
           line-height: 1.5em
         .cost
-          font-size: 36px
+          font-size: $text-cost
           font-weight: bold
           margin: 25px 0
         .buttons
@@ -354,7 +356,7 @@ $card-border-radius: 5px
 
 //courses popup styles
 
-$bg-popup: rgba(0, 0, 0, 0.95)
+$bg-popup: rgba(0, 0, 0, 0.7)
 
 .allCoursesBox
   position: fixed
@@ -362,15 +364,20 @@ $bg-popup: rgba(0, 0, 0, 0.95)
   left: 0
   height: 100vh
   width: 100vw
-  background: $bg-popup
+  background: rgba(37, 37, 37, 0.7)
   z-index: 9999
+  transition: 1s
   &.show
-    display: block
+    opacity: 0
+    + .static
+      filter: blur(5px) contrast(75%)
+      margin-top: -75px
   &.hide
     display: none
   .container
     position: relative
     height: 100%
+    transition: 1s
     .popup-closeButton
       position: absolute
       top: 10%
@@ -387,7 +394,49 @@ $bg-popup: rgba(0, 0, 0, 0.95)
       &:hover
         background: $bg-text-extra-light
         color: $bg-popup
-    .content
-      color: #fff
-      font-size: 150px
-      text-align: center
+    .crsLabel
+      position: relative
+      .crsImg
+        background-size: cover
+        background-repeat: no-repeat
+        background-position-y: center
+        &.current
+          height: 250px
+          position: absolute
+          width: 40%
+          top: 90px
+          left: 30%
+    .crsDesc
+      color: #c3c3c3
+      font-size: $text-normal
+      margin-top: 210px
+      background: rgba(28, 37, 47, 0.7)
+      padding: 180px 40px 40px 40px
+      height: 470px
+      box-shadow: 35px 35px 60px 0 #1b1b1b
+      h2
+        text-align: right
+        font-weight: normal
+        margin-top: -4px
+        &::after
+          background: $text-light
+          margin-right: 0
+      .amount
+        font-size: $text-cost
+        text-align: right
+        padding: 30px 0
+      .button-send
+        text-transform: uppercase
+        color: #000
+        padding: 20px
+        font-size: 24px
+        text-align: center
+        border: 1px solid
+        border-radius: 36px
+        background: rgba(195, 195, 195, 0.1)
+      .fullDesc
+        padding-left: 60px
+        p
+          margin-bottom: 20px
+          font-weight: 300
+          line-height: 22px
