--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,8 @@ header {
   position: fixed;
   width: 100%;
   top: 0;
-  z-index: 999; }
+  z-index: 999;
+  transition: 0.5s; }
   header .container {
     padding: 0 85px; }
   header nav {
@@ -306,26 +307,24 @@ header {
                 color: #FFF; }
 
 .static {
-  transition: 1s; }
+  transition: opacity 0.5s; }
 
 .allCoursesBox {
   position: fixed;
-  top: 0;
   left: 0;
+  top: 0;
   height: 100vh;
   width: 100vw;
   background: rgba(37, 37, 37, 0.7);
   z-index: 9999;
-  transition: 1s; }
-  .allCoursesBox.show + .static {
-    filter: blur(5px) contrast(75%);
-    margin-top: -75px; }
-  .allCoursesBox.hide {
-    display: none; }
+  transition: 1s;
+  display: none;
+  opacity: 0; }
   .allCoursesBox .container {
+    opacity: 1;
     position: relative;
     height: 100%;
-    transition: 1s; }
+    transition: opacity 0.5s, top 0.7s cubic-bezier(0.83, 0.38, 0.18, 2.11) 0.1s; }
     .allCoursesBox .container .popup-closeButton {
       position: absolute;
       top: 7%;
@@ -352,7 +351,7 @@ header {
         height: 250px;
         position: absolute;
         width: 40%;
-        top: 90px;
+        top: 80px;
         left: 30%;
         transition: 500ms; }
         .allCoursesBox .container .crsLabel .crsImg.current {
@@ -360,20 +359,20 @@ header {
           z-index: 99; }
         .allCoursesBox .container .crsLabel .crsImg.prev {
           box-shadow: 9px 9px 20px 0 #191919;
-          transform: scale(0.6) translateX(-133%) rotateZ(3deg);
+          transform: scale(0.5) translate(-156%, -40px) rotateZ(-14deg);
           z-index: 9;
           cursor: pointer; }
         .allCoursesBox .container .crsLabel .crsImg.next {
           box-shadow: 9px 9px 20px 0 #191919;
-          transform: scale(0.6) translateX(133%) rotateZ(-3deg);
+          transform: scale(0.5) translate(153%, 110px) rotateZ(13deg);
           z-index: 9;
           cursor: pointer; }
     .allCoursesBox .container .crsDesc {
       color: #c3c3c3;
       font-size: 16px;
-      margin-top: 200px;
+      margin-top: 190px;
       background: rgba(28, 37, 47, 0.7);
-      padding: 130px 40px 40px 40px;
+      padding: 130px 40px 40px 60px;
       height: 470px;
       box-shadow: 35px 35px 60px 0 #1b1b1b;
       border-top: 50px solid #182748; }
@@ -392,15 +391,21 @@ header {
           padding: 30px 0; }
         .allCoursesBox .container .crsDesc .crsDescContent .button-send {
           text-transform: uppercase;
-          color: #000;
-          padding: 20px;
+          color: #182748;
+          padding: 20px 0;
           font-size: 24px;
           text-align: center;
-          border: 1px solid;
-          border-radius: 36px;
-          background: rgba(24, 39, 72, 0.5); }
+          border: 5px solid #ffffff5c;
+          border-radius: 50px;
+          background: rgba(255, 255, 255, 0.28);
+          width: 270px;
+          position: absolute;
+          left: 90px;
+          bottom: 10px;
+          height: 80px;
+          box-shadow: 39px 19px 40px -5px #080808; }
         .allCoursesBox .container .crsDesc .crsDescContent .fullDesc {
-          padding-left: 60px; }
+          padding-left: 50px; }
           .allCoursesBox .container .crsDesc .crsDescContent .fullDesc p {
             margin-bottom: 20px;
             font-weight: 300;
