--- a/css/main.css
+++ b/css/main.css
@@ -238,7 +238,7 @@ header {
     display: flex;
     justify-content: space-between; }
     .courses .courses-block .courses-block-item {
-      width: calc(100%/3 - 20px);
+      width: calc((100% - 60px)/3);
       max-width: 380px;
       margin-bottom: 30px;
       position: relative; }
@@ -445,3 +445,55 @@ header {
       text-align: center;
       font-size: 36px;
       font-weight: bold; }
+
+.instructors {
+  padding: 105px 0;
+  height: 800px;
+  background-color: #F0F0FD;
+  color: #182748; }
+  .instructors h2:after {
+    background-color: #103B99; }
+  .instructors-tagline {
+    text-align: center;
+    font-size: 16px;
+    padding: 0 60px;
+    margin-top: 30px;
+    margin-bottom: -4px; }
+  .instructors-block {
+    margin-top: 60px; }
+    .instructors-block .arrow {
+      display: flex;
+      cursor: pointer; }
+    .instructors-block img {
+      margin: auto 0; }
+    .instructors-block .right-arrow {
+      justify-content: flex-end; }
+      .instructors-block .right-arrow img {
+        transform: rotateZ(180deg); }
+    .instructors-block-items {
+      justify-content: space-between; }
+    .instructors-block-item {
+      width: calc((100% - 120px)/3);
+      border: 1px solid #ccc; }
+      .instructors-block-item .avatar {
+        width: 100%;
+        height: 300px; }
+      .instructors-block-item .avatar-1 {
+        background: center center url("/img/avatar_1.png"); }
+      .instructors-block-item .avatar-2 {
+        background: center center url("/img/avatar_2.png"); }
+      .instructors-block-item .avatar-3 {
+        background: center center url("/img/avatar_3.png"); }
+      .instructors-block-item .title {
+        height: 100px;
+        background-color: #FFF;
+        color: #182748;
+        padding-top: 30px; }
+        .instructors-block-item .title .name {
+          text-transform: uppercase;
+          font-weight: 500;
+          text-align: center;
+          font-size: 20px;
+          margin: -5px 0 7px 0; }
+        .instructors-block-item .title .desc {
+          text-align: center; }
