--- a/css/main.sass
+++ b/css/main.sass
@@ -287,7 +287,7 @@ $card-border-radius: 5px
     display: flex
     justify-content: space-between
     .courses-block-item
-      width: calc(100%/3 - 20px)
+      width: calc((100% - 60px)/3)
       max-width: 380px
       margin-bottom: 30px
       position: relative
@@ -470,6 +470,7 @@ $bg-popup: rgba(0, 0, 0, 0.7)
             line-height: 22px
 
 
+
 //indicators section styles
 
 .indicators
@@ -502,3 +503,59 @@ $bg-popup: rgba(0, 0, 0, 0.7)
       text-align: center
       font-size: 36px
       font-weight: bold
+
+
+
+//instructors section styles
+
+.instructors
+  padding: 105px 0
+  height: 800px
+  background-color: $bg-text-light
+  color: $bg-text-dark
+  h2:after
+    background-color: $bg-text-accent
+  &-tagline
+    text-align: center
+    font-size: $text-normal
+    padding: 0 60px
+    margin-top: 30px
+    margin-bottom: -4px
+  &-block
+    margin-top: 60px
+    .arrow
+      display: flex
+      cursor: pointer
+    img
+      margin: auto 0
+    .right-arrow
+      justify-content: flex-end
+      img
+        transform: rotateZ(180deg)
+    &-items
+      justify-content: space-between
+    &-item
+      width: calc((100% - 120px)/3)
+      border: 1px solid #ccc
+      .avatar
+        width: 100%
+        height: 300px
+      .avatar-1
+        background: center center url('/img/avatar_1.png')
+      .avatar-2
+        background: center center url('/img/avatar_2.png')
+      .avatar-3
+        background: center center url('/img/avatar_3.png')
+      .title
+        height: 100px
+        background-color: $bg-text-extra-light
+        color: $bg-text-dark
+        padding-top: 30px
+        .name
+          text-transform: uppercase
+          font-weight: 500
+          text-align: center
+          font-size: 20px
+          margin: -5px 0 7px 0
+        .desc
+          text-align: center
