--- a/css/main.css
+++ b/css/main.css
@@ -460,10 +460,12 @@ header {
     margin-top: 30px;
     margin-bottom: -4px; }
   .instructors-block {
-    margin-top: 60px; }
+    margin-top: 60px;
+    perspective: 1500px; }
     .instructors-block .arrow {
       display: flex;
-      cursor: pointer; }
+      cursor: pointer;
+      transition: 500ms; }
     .instructors-block img {
       margin: auto 0; }
     .instructors-block .right-arrow {
@@ -474,16 +476,35 @@ header {
       justify-content: space-between; }
     .instructors-block-item {
       width: calc((100% - 120px)/3);
-      border: 1px solid #ccc; }
+      border: 1px solid #ccc;
+      overflow: hidden; }
       .instructors-block-item .avatar {
         width: 100%;
-        height: 300px; }
-      .instructors-block-item .avatar-1 {
-        background: center center url("/img/avatar_1.png"); }
-      .instructors-block-item .avatar-2 {
-        background: center center url("/img/avatar_2.png"); }
-      .instructors-block-item .avatar-3 {
-        background: center center url("/img/avatar_3.png"); }
+        height: 300px;
+        position: relative; }
+        .instructors-block-item .avatar .hover-box {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, 0);
+          display: flex;
+          justify-content: center;
+          align-items: flex-end;
+          transition: 1s; }
+        .instructors-block-item .avatar .soc-net {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          color: #FFF;
+          text-align: center;
+          background: #103B99;
+          margin: 0 15px 15px;
+          transition: 300ms;
+          transform: scale(0); }
+          .instructors-block-item .avatar .soc-net img {
+            width: 100%; }
       .instructors-block-item .title {
         height: 100px;
         background-color: #FFF;
