--- a/css/main.sass
+++ b/css/main.sass
@@ -523,9 +523,11 @@ $bg-popup: rgba(0, 0, 0, 0.7)
     margin-bottom: -4px
   &-block
     margin-top: 60px
+    perspective: 1500px
     .arrow
       display: flex
       cursor: pointer
+      transition: 500ms
     img
       margin: auto 0
     .right-arrow
@@ -537,15 +539,34 @@ $bg-popup: rgba(0, 0, 0, 0.7)
     &-item
       width: calc((100% - 120px)/3)
       border: 1px solid #ccc
+      overflow: hidden
       .avatar
         width: 100%
         height: 300px
-      .avatar-1
-        background: center center url('/img/avatar_1.png')
-      .avatar-2
-        background: center center url('/img/avatar_2.png')
-      .avatar-3
-        background: center center url('/img/avatar_3.png')
+        position: relative
+        .hover-box
+          position: absolute
+          top: 0
+          left: 0
+          width: 100%
+          height: 100%
+          background: rgba(0, 0, 0, 0)
+          display: flex
+          justify-content: center
+          align-items: flex-end
+          transition: 1s
+        .soc-net
+          width: 40px
+          height: 40px
+          border-radius: 50%
+          color: $bg-text-extra-light
+          text-align: center
+          background: $bg-text-accent
+          margin: 0 15px 15px
+          transition: 300ms
+          transform: scale(0)
+          img
+            width: 100%
       .title
         height: 100px
         background-color: $bg-text-extra-light
