--- a/css/main.css
+++ b/css/main.css
@@ -477,7 +477,8 @@ header {
     .instructors-block-item {
       width: calc((100% - 120px)/3);
       border: 1px solid #ccc;
-      overflow: hidden; }
+      overflow: hidden;
+      transition: 300ms; }
       .instructors-block-item .avatar {
         width: 100%;
         height: 300px;
