--- a/css/main.sass
+++ b/css/main.sass
@@ -540,6 +540,7 @@ $bg-popup: rgba(0, 0, 0, 0.7)
       width: calc((100% - 120px)/3)
       border: 1px solid #ccc
       overflow: hidden
+      transition: 300ms
       .avatar
         width: 100%
         height: 300px
