added course select in feedback section

--- a/css/main.css
+++ b/css/main.css
@@ -618,7 +618,7 @@ header {
         .feedback form .course-list-block .course-list-item:hover .img {
           transform: translate(-81px, -43px) scale(4) rotateZ(-5deg);
           box-shadow: 2px 2px 7px 1px #000;
-          transition: 650ms;
+          transition: transform 650ms 250ms, opacity 150ms;
           cursor: pointer;
           position: relative;
           z-index: 50; }
@@ -677,7 +677,8 @@ header {
             display: none; }
         .feedback form .course-list-block .course-list-item .cost {
           transform: scale(0);
-          position: absolute; }
+          position: absolute;
+          cursor: pointer; }
         .feedback form .course-list-block .course-list-item .title {
           overflow: hidden;
           padding: 0 9px;
