--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,6 @@ h2 {
     width: 70px;
     margin: 23px auto 0; }
 
-footer {
-  height: 100vh;
-  background: #ccc;
-  text-align: center;
-  font-size: 30px;
-  color: #888; }
-
 .hidden {
   display: none; }
 
@@ -591,7 +584,10 @@ header {
       border-radius: 23px;
       background: #103B99;
       text-transform: uppercase;
-      color: #FFF; }
+      color: #FFF;
+      cursor: pointer; }
+      .feedback form input.submit:hover {
+        background: #182748; }
     .feedback form div.course-select {
       position: relative;
       color: #757575;
@@ -699,3 +695,42 @@ header {
           line-height: 44px;
           width: 194px;
           text-overflow: ellipsis; }
+
+footer {
+  height: 655px;
+  background: #F0F0FD;
+  font-size: 20px;
+  padding: 105px 0;
+  color: #182748;
+  border-bottom: 70px solid #2c2c2c; }
+  footer h2 {
+    text-align: start; }
+    footer h2:after {
+      background-color: #103B99;
+      margin: 30px 0 60px 0; }
+  footer .contacts-info-item {
+    font-size: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    height: 24px; }
+    footer .contacts-info-item__last {
+      margin-bottom: 60px; }
+    footer .contacts-info-item .contacts-info-icon {
+      width: 40px;
+      height: 100%;
+      align-items: center;
+      display: flex; }
+      footer .contacts-info-item .contacts-info-icon img {
+        width: 24px; }
+  footer .soc-net {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    color: #FFF;
+    text-align: center;
+    background: #103B99;
+    margin: 0 30px 0 0;
+    transition: 300ms; }
+    footer .soc-net img {
+      height: 100%; }
