--- a/css/main.sass
+++ b/css/main.sass
@@ -41,13 +41,6 @@ h2
     width: 70px
     margin: 23px auto 0
 
-footer
-  height: 100vh
-  background: #ccc
-  text-align: center
-  font-size: 30px
-  color: #888
-
 .hidden
   display: none
 
@@ -658,6 +651,9 @@ $bg-popup: rgba(0, 0, 0, 0.7)
       background: $bg-text-accent
       text-transform: uppercase
       color: $bg-text-extra-light
+      cursor: pointer
+      &:hover
+        background: $bg-text-dark
     div.course-select
       position: relative
       color: #757575
@@ -768,3 +764,44 @@ $bg-popup: rgba(0, 0, 0, 0.7)
             line-height: 44px
             width: 194px
             text-overflow: ellipsis
+
+//footer styles
+
+footer
+  height: 655px
+  background: $bg-text-light
+  font-size: $text-l
+  padding: 105px 0
+  color: $bg-text-dark
+  border-bottom: 70px solid #2c2c2c
+  h2
+    text-align: start
+    &:after
+      background-color: $bg-text-accent
+      margin: 30px 0 60px 0
+  .contacts-info-item
+    font-size: $text-l
+    margin-bottom: 20px
+    display: flex
+    height: 24px
+    &__last
+      margin-bottom: 60px
+    .contacts-info-icon
+      width: 40px
+      height: 100%
+      align-items: center
+      display: flex
+      img
+        width: 24px
+  .soc-net
+    display: inline-block
+    width: 40px
+    height: 40px
+    border-radius: 50%
+    color: $bg-text-extra-light
+    text-align: center
+    background: $bg-text-accent
+    margin: 0 30px 0 0
+    transition: 300ms
+    img
+      height: 100%
