--- a/css/main.sass
+++ b/css/main.sass
@@ -779,14 +779,14 @@ footer
     &:after
       background-color: $bg-text-accent
       margin: 30px 0 60px 0
-  .contacts-info-item
+  .contacts-info__item
     font-size: $text-l
     margin-bottom: 20px
     display: flex
     height: 24px
-    &__last
+    &-last
       margin-bottom: 60px
-    .contacts-info-icon
+    &-icon
       width: 40px
       height: 100%
       align-items: center
